syntax = "proto3";
package account;
import "event.proto";
option java_package = "com.ates.messages";

message TaskCompletionPaymentApplied {
    EventHeaders headers = 1;
    string taskPublicId = 2;
    string accountOwnerPublicId = 3;
    int32 amount = 4;
    int64 performedAt = 5;
}

message TaskAssignmentFeeApplied {
    EventHeaders headers = 1;
    string taskPublicId = 2;
    string accountOwnerPublicId = 3;
    int32 amount = 4;
    int64 performedAt = 5;
}